[package]
edition = "2024"
name = "keyboxGenerator-rs"
version = "0.1.0"


[dependencies]
palc = "0.0.1"
rand = "0.9"

# OpenSSL
openssl = { version = "0.10", optional = true }


[[bin]]
name = "keyboxgen"
path = "src/main.rs"

[features]
default = ["openssl-backend"]
openssl-backend = ["dep:openssl"]


[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
